<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_calculator"
            android:icon="@drawable/ic_menu_calculator"
            android:title="@string/menu_home" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_source_code"
                android:icon="@drawable/ic_menu_code"
                android:title="@string/menu_source_code" />
            <item
                android:id="@+id/nav_developed_by"
                android:icon="@drawable/ic_menu_info"
                android:title="@string/menu_developed_by" />
        </menu>
    </item>
</menu>